2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/*.cs: no longer uses the NodeState object but Context.GetTreeBuilder
	to get the ITreeBuilder for a specific node

	* NodeBuilders/TableNodeBuilder.cs: use a bg thread Select* methods
	* NodeBuilders/ConstraintsNodeBuilder.cs, NodeBuilders/ColumnNodeBuilder.cs: added support for column constraints
	* ConnectionManagerCommands.cs, NodeBuilders/ConnectionContextCollectionNodeBuilder.cs:
	moved AddConnection command into the nodebuilder
	* ConnectionManagerPad.cs: ConnectionContextService is now automatically initialized
	* MonoDevelop.Database.ConnectionManager.addin.xml: commented out a command since it caused problems

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/*.cs: Make use of the GuiProvider to show Gui dialogs

2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/ProceduresNodeBuilder.cs, NodeBuilders/TablesNodeBuilder.cs,
	NodeBuilders/UsersNodeBuilder.cs, NodeBuilders/ViewsNodeBuilder.cs:
	implemented create command
	* NodeBuilders/ProcedureNodeBuilder.cs, NodeBuilders/TableNodeBuilder.cs,
	NodeBuilders/UserNodeBuilder.cs, NodeBuilders/ViewNodeBuilder.cs:
	implemented drop, rename and refresh commands
	* NodeBuilders/ConnectionContextNodeBuilder.cs: use the new schemaprovider metadata support
	* NodeBuilders/ConnectionContextCollectionNodeBuilder.cs: implemented CreateDatabase

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* NodeBuilders/ViewNodeBuilder.cs, NodeBuilders/UserNodeBuilder.cs,
	NodeBuilders/TableNodeBuilder.cs, NodeBuilders/ProcedureNodeBuilder.cs,
	NodeBuilders/ParametersNodeBuilder.cs: Added CommandHandlers and CommandUpdateHandlers
	* NodeBuilders/ConnectionContextNodeBuilder.cs, NodeBuilders/ConstraintsNodeBuilder.cs
	NodeBuilders/ProceduresNodeBuilder.cs, NodeBuilders/TablesNodeBuilder.cs,
	NodeBuilders/UsersNodeBuilder.cs, NodeBuilders/ViewsNodeBuilder.cs,
	NodeBuilders/TriggersNodeBuilder.cs: added CommandUpdateHandlers