@@ -45,9 +45,12 @@ namespace MonoDevelop.Database.ConnectionManager
 {
 	public class TableNodeBuilder : TypeNodeBuilder
 	{
+		private EventHandler RefreshHandler;
+
 		public TableNodeBuilder ()
 			: base ()
 		{
+			RefreshHandler = new EventHandler (OnRefreshEvent);
 		}
 		
 		public override Type NodeDataType {
@@ -69,12 +72,14 @@ namespace MonoDevelop.Database.ConnectionManager
 		
 		public override string GetNodeName (ITreeNavigator thisNode, object dataObject)
 		{
-			return GettextCatalog.GetString ("Table");
+			TableNode node = dataObject as TableNode;
+			return node.Table.Name;
 		}
 		
 		public override void BuildNode (ITreeBuilder builder, object dataObject, ref string label, ref Gdk.Pixbuf icon, ref Gdk.Pixbuf closedIcon)
 		{
 			TableNode node = dataObject as TableNode;
+			node.RefreshEvent += (EventHandler)Services.DispatchService.GuiDispatch (RefreshHandler);
 
 			label = node.Table.Name;
 			icon = Context.GetIcon ("md-db-table");
@@ -121,6 +126,12 @@ namespace MonoDevelop.Database.ConnectionManager
 		{
 			return true;
 		}
+		
+		private void OnRefreshEvent (object sender, EventArgs args)
+		{
+			ITreeBuilder builder = Context.GetTreeBuilder (sender);
+			builder.Update ();
+		}
 	}
 	
 	public class TableNodeCommandHandler : NodeCommandHandler
@@ -152,6 +163,7 @@ namespace MonoDevelop.Database.ConnectionManager
 			
 			if (provider.IsValidName (newName)) {
 				provider.RenameTable (node.Table, newName);
+				node.Refresh ();
 			} else {
 				Services.DispatchService.GuiDispatch (delegate () {
 					Services.MessageService.ShowError (String.Format (
