@@ -1,3 +1,9 @@
+2007-08-02  Ben Motmans <ben.motmans@gmail.com>
+
+	* NodeBuilders/ViewNodeBuilder.cs, NodeBuilders/UserNodeBuilder.cs,
+	NodeBuilders/TableNodeBuilder.cs, NodeBuilders/ProcedureNodeBuilder.cs,
+	NodeBuilders/ConnectionContextNodeBuilder.cs: fixed rename objects in the tree
+
 2007-08-01  Ben Motmans <ben.motmans@gmail.com>
 
 	* NodeBuilders/*.cs: no longer uses the NodeState object but Context.GetTreeBuilder
